force-app/main/default/objects/ExternalServiceSettings__mdt/ExternalServiceSettings__mdt.object-meta.xml
<CustomObject>
    <description>Here we store all the external services details
Ex:End Point details,Env,Target System....</description>
    <label>ExternalServiceSetting</label>
    <pluralLabel>ExternalServiceSettings</pluralLabel>
</CustomObject>