force-app/main/default/objects/ExternalServiceSettings__mdt/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <description>All the End Points to different Environment's mentioned in this field</description>
    <label>EndPoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>