force-app/main/default/objects/ExternalServiceSettings__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Ex:DEV,THEQA,Stage.</description>
    <label>Environment</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>