force-app/main/default/objects/ExternalServiceSettings__mdt/fields/IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>IsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify weather URL is production URL or sandbox URL</description>
    <label>IsSandbox</label>
    <type>Checkbox</type>
</CustomField>