force-app/main/default/objects/ExternalServiceSettings__mdt/fields/SecurityToken__c.field-meta.xml
<CustomField>
    <fullName>SecurityToken__c</fullName>
    <description>Used to send Security Token to Service with header</description>
    <label>Security Token</label>
    <type>TextArea</type>
</CustomField>