force-app/main/default/objects/ExternalServiceSettings__mdt/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <description>Ranking Service,Account update Service</description>
    <label>Service Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>