force-app/main/default/objects/ExternalServiceSettings__mdt/fields/TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>TargetSystem__c</fullName>
    <description>Poseidon,Elektra</description>
    <label>Target System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>